updated text and colors

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeCats</title>
+    <title>Dry Koala Land Club</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="images/x-icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/x-icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/x-icon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/x-icon/DKLCapple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/x-icon/DKLCFavicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/x-icon/DRYKOALALOGO16x16.png">
     <link rel="manifest" href="images/x-icon/site.webmanifest">
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -18,7 +18,7 @@
       <div class="container">
         <div class="logo">
           <a href="/">
-            <img src="images/x-icon/favicon-32x32.png" alt="logo" />
+            <img src="images\x-icon\DKLCFavicon.ico" alt="logo" />
           </a>
         </div>
         <div class="menu">
@@ -30,14 +30,14 @@
             <img src="images/header/discord.webp" alt="Discord" />
           </a>
           <a
-            href="https://twitter.com/CodeCats10k"
+            href="https://twitter.com/drykoala"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/codecats"
+            href="https://opensea.io/collection/"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -79,9 +79,9 @@
         </ul>
         <h1>NFT Drop Coming Soon!!</h1>
                
-        <p>A new batch of cute cats will be available very soon!</p>
+        <p>A batch of koalas will be available very soon!</p>
         <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
-          ><span>Join the Catmmunity</span>
+          ><span>Join the Dry Koala Community</span>
         </a>
       </div>
     </section>
