--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/g8aMhFTTWt"
+            href="https://discord.gg/GMGzSFX7yz"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -37,7 +37,7 @@
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/"
+            href="https://opensea.io/collection/dry-koala-land-club"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -50,8 +50,15 @@
       </div>
     </header>
 
+    <section>
+       <p style="text-align:center;">
+        <img src="images\x-icon\PreviewKoala.gif" alt="Mystery" height="200" width="300">
+      </p>
+    </section>
+
     <section class="container">
       <div class="owner-status"></div>
+      <div class="memberForm"></div>
       <div class="countdown">
         <ul
           id="countdown"
@@ -78,11 +85,12 @@
             <p class="count-text">Sec</p>
           </li>
         </ul>
-        <h1>NFT Drop Coming Soon!!</h1>
-               
-        <p>A batch of koalas will be available very soon!</p>
-        <a href="https://discord.gg/g8aMhFTTWt" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
-          ><span>Join the Dry Koala Community</span>
+        <h1>🐨NFT Drop Coming Soon!!🐨</h1>
+        
+        <p>🌿A batch of koalas will be available very soon!🌿</p>
+        <p>Already have your Dry Koala? Connect your wallet to verify and unlock all of your DKLC Member benefits!</p>
+        <a href="https://discord.gg/GMGzSFX7yz" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
+          ><span>🐨Join the Dry Koala Land Club Community Discord🐨</span>
         </a>
       </div>
     </section>
@@ -90,5 +98,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.1/dist/metamask-onboarding.bundle.js"></script>
     <script src="js/countdown.js"></script>
     <script src="js/app.js"></script>
+    <script src="netMemForm.html"></script>
   </body>
 </html>
