--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <p class="count-text">Sec</p>
           </li>
         </ul>
-        <h1>🐨NFT Drop Coming Soon!!🐨</h1>
+        <h1>NFT Drop Coming Soon!!</h1>
         
         <p>🌿A batch of koalas will be available very soon!🌿</p>
         <p>Already have your Dry Koala? Connect your wallet to verify and unlock all of your DKLC Member benefits!</p>
