--- a/netMemForm.html
+++ b/netMemForm.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+<body>
 <form name="memberContact" method="POST" data-netlify="true">
     <p>
         <label>Welcome!!! Enter your information to unlock all of your DKLC Members benefits. 
@@ -21,3 +24,5 @@
       <button type="submit">Send</button>
     </p>
   </form>
+</body>
+</html>
