--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <section class="container">
        
-      <div hidden class="form">
+      <div1 hidden class="form">
         <form name="memberContact" method="POST" data-netlify="true">
           <p>
             <label>Welcome!!! Enter your information to unlock all of your DKLC Members benefits. 
