--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
     <section class="container">
        
-      <div1 hidden class="form">
-        <form name="memberContact" method="POST" data-netlify="true">
+      <div class="form">
+        <form1  hidden name="memberContact" method="POST" data-netlify="true">
           <p>
             <label>Welcome!!! Enter your information to unlock all of your DKLC Members benefits. 
           </p>
