--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     </section>
 
     <section class="container">
-       
+      <div class="owner-status"></div>
       <div class="form">
-        <form1  hidden name="memberContact" method="POST" data-netlify="true">
+        <form hidden name="memberContact" method="POST" data-netlify="true">
           <p>
             <label>Welcome!!! Enter your information to unlock all of your DKLC Members benefits. 
           </p>
@@ -82,8 +82,7 @@
             <button type="submit">Send</button>
           </p>
         </form>
-      </div> 
-      <div class="owner-status"></div>
+      </div>
       <div class="countdown">
         <ul
           id="countdown"
