--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <div class="form">
+    <a class="form">
         <form hidden name="memberContact" method="POST" data-netlify="true">
           <p>
             <label>Welcome!!! Enter your information to unlock all of your DKLC Members benefits. 
@@ -25,5 +25,5 @@
             <button type="submit">Send</button>
           </p>
         </form>
-      </div>
+    </a>
       </head>
