--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <section class="container">
       <div class="owner-status"></div>
-      <div class="form">
+      <a class="form">
         <form hidden name="memberContact" method="POST" data-netlify="true">
           <p>
             <label>Welcome!!! Enter your information to unlock all of your DKLC Members benefits. 
@@ -83,7 +83,7 @@
             <button type="submit">Send</button>
           </p>
         </form>
-      </div>
+      </a>
       <div class="countdown">
         <ul
           id="countdown"
