--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section class="container">
       <div class="owner-status"></div>
         <a class="form">
-          <form hidden name="memberContact" method="POST" data-netlify="true">
+          <form name="memberContact" hidden method="POST" data-netlify="true">
             <p>
             <label>Welcome!!! Enter your information to unlock all of your DKLC Members benefits. 
             </p>
