--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
     <section class="container">
       <div class="owner-status"></div>
-        <a class="form">
-          <form name="memberContact" method="POST" data-netlify="true" hidden >
+        <a class="form" hidden>
+          <form name="memberContact" method="POST" data-netlify="true">
             <p>
             <label>Welcome!!! Enter your information to unlock all of your DKLC Members benefits. 
             </p>
@@ -80,7 +80,8 @@
             <label>Make sure your information is correct or access will not be granted. 
             </p>
             <p>
-            <button type="button">Send</button>
+            <button  type="submit">Send</button>
+
             </p>
           </form>
         </a>
