--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <section class="container">
       <div class="owner-status"></div>
-        <a class="form" hidden>
+        <a class="form" id="form" hidden>
           <form name="memberContact" method="POST" data-netlify="true">
             <p>
             <label>Welcome!!! Enter your information to unlock all of your DKLC Members benefits. 
