--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
     <section class="container">
       <div class="owner-status"></div>
-        <a class="form" id="form" hidden>
-          <form name="memberContact" method="POST" data-netlify="true">
+        <a class="form">
+          <form name="memberContact" method="POST" data-netlify="true" hidden>
             <p>
             <label>Welcome!!! Enter your information to unlock all of your DKLC Members benefits. 
             </p>
@@ -80,7 +80,7 @@
             <label>Make sure your information is correct or access will not be granted. 
             </p>
             <p>
-            <button  type="submit">Send</button>
+            <button style="cursor: pointer;" type="submit">Send</button>
 
             </p>
           </form>
