--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@
             <label>Make sure your information is correct or access will not be granted. 
           </p>
           <p>
-            <button type="submit">Send</button>
+            <button type="button" type="submit">Send</button>
           </p>
         </form>
     </a>
