--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <label>Make sure your information is correct or access will not be granted. 
             </p>
             <p>
-            <button style="cursor: pointer;" type="submit">Send</button>
+            <button type="button" type="submit">Send</button>
 
             </p>
           </form>
