--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <label>Make sure your information is correct or access will not be granted. 
             </p>
             <p>
-            <button type="submit" type="button">Send</button>
+            <button name="data" onclick="getData(); return false">Send</button>
 
             </p>
           </form>
