--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
             <p class="count-text">Sec</p>
           </li>
         </ul>
-        <h1>NFT Drop Coming Soon!!</h1>
+        <h1>Release Day Coming Soon!!</h1>
         
         <p>🌿A batch of koalas will be available very soon!🌿</p>
+        <p>🐨Grab your DKLC Membership NFT at OpenSea🐨</p>
         <p>Already have your Dry Koala? Connect your wallet to verify and unlock all of your DKLC Member benefits!</p>
         <a href="https://discord.gg/GMGzSFX7yz" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>🐨Join the Dry Koala Land Club Community Discord🐨</span>
