Updated some info

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <section class="container">
       <div class="owner-status"></div>
         <a class="form">
-          <form name="memberContact" method="POST" action="POST" data-netlify="true" hidden>
+          <form name="memberContact" method="POST" action="POST" data-netlify="true" hidden >
             <p>
-            <label>Welcome!!! Enter your information to unlock all of your DKLC Members benefits. 
+            <label>Welcome!!! Enter your information to unlock all of your DKLC Members benefits. ALL INPUTS OPTIONAL.
             </p>
             <p>
             <label>Your Wallet Address: <input type="text" name="wAddress" /></label>   
@@ -74,13 +74,18 @@
              <label>Discord Username: <input type="text" name="discordName" /></label>  
             </p>
             <p>
-            <label>Leave us a message: <textarea name="message"></textarea></label>
+              <label>Twitter: <input type="text" name="Twitter" /></label>  
+             </p>
+            <p>
+            <label>Mailing Address: <textarea name="Mailing"></textarea></label>
             </p>
             <p>
-            <label>Make sure your information is correct or access will not be granted. 
+            <label>Make sure your information is correct or some benefits will not be granted. 
             </p>
             <p>
-            <button name="data" onclick="getData(); return false">Send</button>
+            <button class="form-btn" 
+                    name="data" 
+                    onclick="getData(); return false">Submit Form</button>
 
             </p>
           </form>
@@ -89,7 +94,7 @@
         <ul
           id="countdown"
           class="count-down"
-          data-date="MAR 01, 2022 00:00:00 PM UTC"
+          data-date="FEB 01, 2022 00:00:00 PM UTC"
         >
           <li class="clock-item">
             <span class="count-number days">20</span>
@@ -111,6 +116,7 @@
             <p class="count-text">Sec</p>
           </li>
         </ul>
+        <p>🌿March 01,2022🌿</p>
         <h1>Release Day Coming Soon!!</h1>
         
         <p>🌿A batch of koalas will be available very soon!🌿</p>
