--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         <img src="images\x-icon\PreviewKoala.gif" alt="Mystery" height="200" width="300">
         </p>
         <p style="text-align:center;">
+          Already have your Dry Koala? Connect your wallet to verify and unlock all of your DKLC Member benefits!</p>
+          <p style="text-align:center;">
         <button class="wallet-btn btn" id="connectWallet">
           <span>Connect MetaMask Wallet</span>
         </button>
