--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <label>Twitter: <input type="text" name="Twitter" /></label>  
              </p>
             <p>
-            <label>Mailing Address: <textarea name="Mailing"></textarea></label>
+            <label>Mailing Address to receive Merch: <textarea name="Mailing"></textarea></label>
             </p>
             <p>
             <label>Make sure your information is correct or some benefits will not be granted. 
@@ -126,8 +126,8 @@
           </li>
         </ul>
         
-        <h1>Offical Release Day Coming Soon!!</h1>
-        <p>🌿A batch of koalas have made there way onto OpenSea, MAKE AN OFFER. Join the club Pre-Launch🌿</p>
+        <h1>Hang High, Stay Dry and Keep Cool</h1>
+        <p>🌿Koalas have made there way onto OpenSea. Join the club🌿</p>
         <p>🐨Grab your DKLC Membership NFT at OpenSea🐨</p>
         
         <a href="https://discord.gg/GMGzSFX7yz" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
